OD-0000 All enumerations to upper case
git-svn-id: https://svn.ish.com.au/ish/willow/trunk@46965 fb2e276d-fae9-0310-b578-b71ac85840b9
