# react/src/js/model/field/DataType.ts
@@ -2,18 +2,18 @@
 import {createStringEnum} from "common/utils/EnumUtils";
 
 export const DataType = createStringEnum([
-      'string',
-      'boolean',
-      'date',
-      'dateTime',
-      'integer',
-      'country',
-      'language',
-      'enum',
-      'email',
-      'suburb',
-      'postcode',
-      'phone'
+      'STRING',
+      'BOOLEAN',
+      'DATE',
+      'DATETIME',
+      'INTEGER',
+      'COUNTRY',
+      'LANGUAGE',
+      'ENUM',
+      'EMAIL',
+      'SUBURB',
+      'POSTCODE',
+      'PHONE'
 ]);
 
 export type DataType = keyof typeof DataType;
