# react/src/js/model/field/FieldSet.ts
@@ -2,9 +2,9 @@
 import {createStringEnum} from "common/utils/EnumUtils";
 
 export const FieldSet = createStringEnum([
-      'enrolment',
-      'waitinglist',
-      'mailinglist'
+      'ENROLMENT',
+      'WAITINGLIST',
+      'MAILINGLIST'
 ]);
 
 export type FieldSet = keyof typeof FieldSet;
