# willow-api/api/src/main/groovy/ish/oncourse/willow/model/field/FieldSet.java
@@ -9,11 +9,11 @@ import com.fasterxml.jackson.annotation.JsonValue;
  */
 public enum FieldSet {
   
-  ENROLMENT("enrolment"),
+  ENROLMENT("ENROLMENT"),
   
-  WAITINGLIST("waitinglist"),
+  WAITINGLIST("WAITINGLIST"),
   
-  MAILINGLIST("mailinglist");
+  MAILINGLIST("MAILINGLIST");
 
   private String value;
 
